--- a/angular.json
+++ b/angular.json
@@ -38,12 +38,12 @@
                 {
                   "type": "initial",
                   "maximumWarning": "12mb",
-                  "maximumError": "12m"
+                  "maximumError": "12mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "500kb",
+                  "maximumError": "500kb"
                 }
               ],
               "fileReplacements": [
